--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "sass": "^1.62.0",
+    "uuid": "^9.0.0",
     "xtypejs": "^0.7.1"
   },
   "devDependencies": {
